--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://massimogri.github.io/portfolio",
+  "homepage": "https://massimogri.github.io",
   "devDependencies": {
     "gh-pages": "^6.2.0"
   }
